mod: added in active css and js for gmaps results card

--- a/assets/css/google_search.css
+++ b/assets/css/google_search.css
@@ -29,6 +29,12 @@
     margin: .5px;
 }
 
+/*This is for the Google search result cards*/
+.active-result {
+    color: #ffffff;
+    background-color: #595959;
+}
+
 /*This is for the google maps info window, by default it is hidden*/
 .pop-up-con {
     display: none;
