--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700');
 
 /*Global CSS selectors which affect all the webpages*/
+/*This set the scroll behavior to smooth*/
+html {
+    scroll-behavior: smooth
+}
+
 /*Setting font to Montserrat and the text color to black*/
 body {
     font-family: "Montserrat", sans-serif;
