--- a/assets/css/local_search.css
+++ b/assets/css/local_search.css
@@ -18,7 +18,6 @@
 .empty-space-local,
 .choose-trade-local {
     background-color: #f0f0f0;
-    height: 200px;
     text-transform: uppercase;
     letter-spacing: 5px;
     text-align: center;
@@ -67,10 +66,10 @@
     letter-spacing: 5px;
 }
 
-
 /*This styles the reset button for the locals search*/
 #reset-btn-local {
     margin-top: 10px;
+    margin-bottom: 10px;
     text-transform: uppercase;
     letter-spacing: 5px;
     height: 35px
