--- a/assets/css/local_search.css
+++ b/assets/css/local_search.css
@@ -2,7 +2,7 @@
 /*Local Search Search Main Element*/
 .local-search {
     margin-top: 10px;
-    min-height: calc(100vh - 280px);
+    min-height: calc(100vh - 201px);
 }
 
 /*This block of code is for the Important notice banner*/
@@ -86,6 +86,8 @@
     background-color: #f0f0f0;
     border-radius: 0;
     display: none;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 /*This styles the headings in the dynamic divs bootstrap card*/
