--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -556,6 +556,12 @@
         margin-bottom: 5px;
     }
 
+    /*This styles the bootstrap card class for the dynamic divs*/
+    .card {
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
     .card-body {
         padding: 5px;
     }
@@ -584,7 +590,6 @@
         bottom: 180px;
         right: 5px;
     }
-
 }
 
 /*Medium Mobile*/
